NDK开发，C++库OpenGL在ShenZhenFragment界面的初使用

--- a/app/src/main/res/layout/fragment_shenzhen.xml
+++ b/app/src/main/res/layout/fragment_shenzhen.xml
@@ -1,36 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <Button
-        android:foreground="@drawable/ripple_foreground_red"
-        android:background="@drawable/button_drawable"
-        android:textColor="@android:color/darker_gray"
-        android:layout_centerInParent="true"
-        android:id="@+id/btn_ripple"
-        android:text="水波纹按钮"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-
-
-</RelativeLayout>
-
-<!--<?xml version="1.0" encoding="utf-8"?>-->
-<!--<LinearLayout-->
-<!--    xmlns:android="http://schemas.android.com/apk/res/android"-->
-<!--    android:orientation="vertical"-->
+<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
+<!--    xmlns:tools="http://schemas.android.com/tools"-->
 <!--    android:layout_width="match_parent"-->
 <!--    android:layout_height="match_parent">-->
 
-<!--    <TextView-->
-<!--        android:gravity="center"-->
-<!--        android:text="深圳"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent"-->
-<!--        />-->
+<!--    <Button-->
+<!--        android:foreground="@drawable/ripple_foreground_red"-->
+<!--        android:background="@drawable/button_drawable"-->
+<!--        android:textColor="@android:color/darker_gray"-->
+<!--        android:layout_centerInParent="true"-->
+<!--        android:id="@+id/btn_ripple"-->
+<!--        android:text="水波纹按钮"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content" />-->
 
-<!--</LinearLayout>-->
+
+
+<!--</RelativeLayout>-->
+
+<!--<?xml version="1.0" encoding="utf-8"?>-->
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <android.opengl.GLSurfaceView
+        android:id="@+id/gl_surface_view"
+        android:layout_gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        />
+
+</LinearLayout>
