--- a/app/src/main/res/layout/fragment_beijing.xml
+++ b/app/src/main/res/layout/fragment_beijing.xml
@@ -12,6 +12,20 @@
         android:layout_width="match_parent"
         android:layout_height="200dp" />
 
+    <Button
+        android:text="6.0权限申请"
+        android:layout_gravity="center"
+        android:id="@+id/perimision"
+        android:layout_width="match_parent"
+        android:layout_height="200dp" />
+
+    <Button
+        android:text="Android 安全"
+        android:layout_gravity="center"
+        android:id="@+id/android_safe"
+        android:layout_width="match_parent"
+        android:layout_height="200dp" />
+
 </LinearLayout>
 
 
