--- a/app/src/main/res/layout/fragment_shenzhen.xml
+++ b/app/src/main/res/layout/fragment_shenzhen.xml
@@ -1,52 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
-<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
-<!--    xmlns:tools="http://schemas.android.com/tools"-->
-<!--    android:layout_width="match_parent"-->
-<!--    android:layout_height="match_parent">-->
-
-<!--    <Button-->
-<!--        android:foreground="@drawable/ripple_foreground_red"-->
-<!--        android:background="@drawable/button_drawable"-->
-<!--        android:textColor="@android:color/darker_gray"-->
-<!--        android:layout_centerInParent="true"-->
-<!--        android:id="@+id/btn_ripple"-->
-<!--        android:text="水波纹按钮"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content" />-->
-
-
-
-<!--</RelativeLayout>-->
-
-<!--<?xml version="1.0" encoding="utf-8"?>-->
-<LinearLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <Button
-        android:text="OpenGL"
-        android:layout_gravity="center"
-        android:id="@+id/bt_open_gl"
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="200dp" />
+        android:layout_height="match_parent">
 
-    <Button
-        android:layout_marginTop="5dp"
-        android:text="WebView"
-        android:layout_gravity="center"
-        android:id="@+id/bt_webview"
-        android:layout_width="match_parent"
-        android:layout_height="200dp" />
+        <Button
+            android:text="OpenGL"
+            android:layout_gravity="center"
+            android:id="@+id/bt_open_gl"
+            android:layout_width="match_parent"
+            android:layout_height="200dp" />
 
-    <Button
-        android:layout_marginTop="5dp"
-        android:text="微信小程序"
-        android:layout_gravity="center"
-        android:id="@+id/bt_wx"
-        android:layout_width="match_parent"
-        android:layout_height="200dp" />
+        <Button
+            android:layout_marginTop="5dp"
+            android:text="WebView"
+            android:layout_gravity="center"
+            android:id="@+id/bt_webview"
+            android:layout_width="match_parent"
+            android:layout_height="200dp" />
 
-</LinearLayout>
+        <Button
+            android:layout_marginTop="5dp"
+            android:text="微信小程序"
+            android:layout_gravity="center"
+            android:id="@+id/bt_wx"
+            android:layout_width="match_parent"
+            android:layout_height="200dp" />
+
+        <Button
+            android:layout_marginTop="5dp"
+            android:text="jetpack"
+            android:layout_gravity="center"
+            android:id="@+id/jetpack"
+            android:layout_width="match_parent"
+            android:layout_height="200dp" />
+
+    </LinearLayout>
+
+
+
+</ScrollView>
