--- a/app/src/main/res/layout/fragment_shanghai.xml
+++ b/app/src/main/res/layout/fragment_shanghai.xml
@@ -19,6 +19,7 @@
             android:layout_height="wrap_content">
 
             <ImageView
+                android:id="@+id/shanghai_iv_bg"
                 app:layout_collapseMode="parallax"
                 app:layout_collapseParallaxMultiplier="0.6"
                 android:scaleType="centerCrop"
